# lumina-wiki

./: .gitignore  CLAUDE.md  LICENSE  README.md  lumina.toml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: lumina_ingest.yml
.github/workflows/: compile.yml  deploy-pages.yml
docs/: index.html  wiki-data.js
raw/2026-04-06/: Attention_Is_All_You_Need.md  Deep_Residual_Learning_for_Image_Recognition.md  FlashAttention_Paper.md  Lumina_arXiv_Paper.md  Lumina_arXiv_Paper.meta.json
raw/2026-04-13/: arXiv_2604_01161.md
scripts/: build_dashboard.py  cli.py  compiler.py  config.py  ingest.py  ingest_enhanced.py  init_cmd.py  linker.py  linter.py  llm_client.py  pipeline.py  query_engine.py  search.py  status_cmd.py  watcher.py
tests/: audit.py  test_all.py
wiki/: .backlinks.json  .compile-stats.json  .compiled.json  Home.md  index.md  log.md
wiki/concepts/: A100.md  BERT_large.md  BLEU.md  CIFAR_10.md  COCO.md  CVPR_2016.md  Deep_Residual_Learning.md  Encoder_Decoder.md  Fan_Xiang_Chuan_Bo_Zhong_Ji_Suan.md  Fen_Kuai_Ji_Suan.md  Fen_Kuai_Ji_Suan_Ce_Lue.md  FlashAttention.md  FlashAttention_2.md  FlashAttention_3.md  GPT_2.md  He_Kaiming.md  Hopper.md  Hopper_Jia_Gou.md  ILSVRC_2015.md  IOGan_Zhi_She_Ji.md  IO_Aware.md  IO_Gan_Zhi.md  IO_Gan_Zhi_She_Ji.md  ImageNet.md  Image_Classification.md  Jian_Sun.md  Lumina.md  Multi_Head_Attention.md  NeurIPS.md  NeurIPS_2017.md  Online_Softmax.md  Positional_Encoding.md  PyTorch.md  Recomputation.md  Ren_Shaoqing.md  ResNet.md  Residual_Function.md  Residual_Learning.md  Residual_Network.md  SDPA.md  (+21 more)
(+9 files in other folders)
