[project]
name = "lumina-wiki"
version = "1.1.0"
description = "GitHub-native personal knowledge compiler powered by LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.4",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "httpx>=0.27",
    "rich>=13.0",
    "python-slugify>=8.0",
]

[project.scripts]
lumina = "scripts.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
